RESOLVED FIXED71852
DFG JIT calculation of OSR entry points is not THUMB2 safe
https://bugs.webkit.org/show_bug.cgi?id=71852
Summary DFG JIT calculation of OSR entry points is not THUMB2 safe
Gavin Barraclough
Reported 2011-11-08 13:16:55 PST
Executable addresses are tagged with a low bit set to distinguish between THUMB2 and traditional ARM.
Attachments
Fix (5.46 KB, patch)
2011-11-08 13:18 PST, Gavin Barraclough
barraclough: review+
Gavin Barraclough
Comment 1 2011-11-08 13:18:26 PST
Gavin Barraclough
Comment 2 2011-11-08 13:34:58 PST
Comment on attachment 114141 [details] Fix Reviewed by Oliver Hunt.
Gavin Barraclough
Comment 3 2011-11-08 13:57:38 PST
Fixed in r99614
Note You need to log in before you can comment on or make changes to this bug.