DFG JIT calculation of OSR entry points is not THUMB2 safe https://bugs.webkit.org/show_bug.cgi?id=71852

Reviewed by Oliver Hunt.

Executable addresses are tagged with a low bit set to distinguish
between THUMB2 and traditional ARM.

* dfg/DFGJITCompiler.cpp:
(JSC::DFG::JITCompiler::exitSpeculativeWithOSR):
* dfg/DFGJITCompiler32_64.cpp:
(JSC::DFG::JITCompiler::exitSpeculativeWithOSR):
* dfg/DFGOSREntry.cpp:
(JSC::DFG::prepareOSREntry):
* jit/JITCode.h:
(JSC::JITCode::executableAddressAtOffset):
(JSC::JITCode::start):
(JSC::JITCode::size):



Canonical link: https://commits.webkit.org/88181@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99614 268f45cc-cd09-0410-ab3c-d52691b4dbfc